[gd_scene load_steps=15 format=3 uid="uid://d2xod8pb6h4qd"]

[ext_resource type="Script" uid="uid://cncjalb71asae" path="res://Scripts/player.gd" id="1_nn08x"]
[ext_resource type="Script" uid="uid://b7pphq8epdkb2" path="res://Scripts/Globals/attack_manager.gd" id="3_52ee3"]
[ext_resource type="AudioStream" uid="uid://bb15qdc0armo2" path="res://Audio/snail_damaged_take_1.wav" id="3_bhhdu"]
[ext_resource type="AudioStream" uid="uid://b4j70ts1rn3n1" path="res://Audio/snail_damaged_take_2.wav" id="4_megsn"]
[ext_resource type="AudioStream" uid="uid://cewdpvvf3kj4y" path="res://Audio/snail_damaged_take_3.wav" id="5_yoq75"]
[ext_resource type="AudioStream" uid="uid://cfsvpywav6n64" path="res://Audio/shitty_sad_trombone_1.mp3" id="6_ksbbd"]
[ext_resource type="Texture2D" uid="uid://cu7dujjrykx1f" path="res://Images/Sprite_Sheet.png" id="6_nn08x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhdu"]
atlas = ExtResource("6_nn08x")
region = Rect2(200, 1600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_megsn"]
atlas = ExtResource("6_nn08x")
region = Rect2(400, 1600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_52ee3"]
atlas = ExtResource("6_nn08x")
region = Rect2(0, 1600, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_yoq75"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhhdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_megsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52ee3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_8gbba"]
font_size = 256
font_color = Color(0, 0, 0, 1)
outline_size = 24
outline_color = Color(0.705018, 0, 0.0496522, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hol4"]
size = Vector2(137, 139)

[sub_resource type="CircleShape2D" id="CircleShape2D_nn08x"]
radius = 81.7435

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 5
z_as_relative = false
collision_layer = 0
collision_mask = 0
motion_mode = 1
script = ExtResource("1_nn08x")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(2.23517e-06, 0.499995)
scale = Vector2(0.75, 0.744)
sprite_frames = SubResource("SpriteFrames_yoq75")
autoplay = "default"

[node name="Label" type="Label" parent="."]
z_index = 1
offset_left = -588.0
offset_top = -523.0
offset_right = 595.0
offset_bottom = 530.0
label_settings = SubResource("LabelSettings_8gbba")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.4, 0.4)

[node name="SlimeSpawner" type="Node" parent="."]
script = ExtResource("3_52ee3")

[node name="Hurtbox_Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="Hurtbox_CollisionShape2D" type="CollisionShape2D" parent="Hurtbox_Area2D"]
position = Vector2(5.5, 1.5)
shape = SubResource("RectangleShape2D_0hol4")

[node name="SnailDamagedTake1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bhhdu")

[node name="SnailDamagedTake2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_megsn")

[node name="SnailDamagedTake3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_yoq75")

[node name="ShittySadTrombone1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ksbbd")

[node name="ExperienceBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExperienceBox"]
position = Vector2(9, 5)
shape = SubResource("CircleShape2D_nn08x")
